services/norizon-research/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: norizon-research
  labels:
    name: norizon-research
    environment: production
